2005-11-16  Josh Roberson <josh@asteriasgi.com>

	* Makefile:  Update to fix non-responsive remote console on Darwin (OSX)(issue #5757)

2005-11-16  Kevin P. Fleming  <kpfleming@digium.com>

	* apps/app_forkcdr.c (forkcdr_exec): issue warning (and don't segfault) if ForkCDR is called on a channel that doesn't have a CDR (issue #5763)

	* channel.c (ast_queue_hangup): ensure that the channel lock is held before changing its fields... (issue #5770)

	* res/res_musiconhold.c: don't spit out incorrect log messages (and leak memory) during reload (issue #5766)

	* channels/chan_sip.c (process_sdp): don't pass video codec number into ast_getformatname(), it is not valid input for that function (issue #5764)

	* pbx/pbx_ael.c (match_assignment): properly parse equal signs surrounded by whitespace (issue #5761)

	* doc/README.realtime: document the limitations of using FreeTDS with Realtime (issue #5767)

2005-11-15  Kevin P. Fleming  <kpfleming@digium.com>

	* Makefile: use -g3 for compiler to include macro information for debugger

	* astmm.c (__ast_vasprintf): don't re-use the ap list without copying it; that's not safe on some platforms (issue #5035)

	* doc/README.backtrace: add note about properly building Asterisk to be able to produce backtraces; wrap text and remove DOS line endings

	* channels/chan_sip.c (add_codec_to_sdp): add 'annexb=no' to G.729A SDP (issue #5539)

	* channels/chan_alsa.c (alsa_hangup): handle autohangup properly (issue #5672)

	* channels/chan_misdn.c (and other files): various fixes (issue #5739)

	* channels/chan_sip.c (handle_request_info): properly forward 'flash' events received via SIP INFO (issue #5751, different patch)

	* apps/app_disa.c (disa_exec): don't duplicate constant strings when not needed

	* apps/app_playback.c (playback_exec): use correct logic tests for options (issue #5752)

	* apps/app_disa.c (disa_exec): use standard arg parsing routines (issue #5736)

2005-11-15  Russell Bryant <russell@digium.com>
